# semantic_highlight_hhem_rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
app/services/: __init__.py  document_processor.py  hhem_validator.py  rag_engine.py  semantic_highlighter.py  vector_store.py
app/utils/: compat_patches.py  metrics.py
notebooks/: rag_showcase.ipynb
scripts/: check_models.py
tests/: test_api.py
tests/test_documents/: sample.txt
