[project]
name = "semantic-hhem-rag"
version = "1.0.0"
description = "Minimal RAG implementation demonstrating cost savings and quality improvements with Semantic Highlighting and HHEM validation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
keywords = ["rag", "semantic-highlighting", "hhem", "fastapi", "openai", "qdrant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.18",
    
    # LLM & Embeddings
    "openai==1.57.2",
    "tiktoken==0.8.0",
    
    # LangChain (Document Loading & Processing)
    "langchain==0.3.13",
    "langchain-openai==0.2.12",
    "langchain-community==0.3.13",
    "langchain-text-splitters==0.3.4",
    
    # Vector Store
    "qdrant-client==1.12.1",
    
    # ML Models
    "transformers==4.47.1",
    "torch==2.5.1",
    "sentencepiece==0.2.0",
    
    # Document Parsing
    "pypdf==5.1.0",
    "python-magic==0.4.27",
    "unstructured==0.16.14",
    
    # Utilities
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "aiofiles==24.1.0",
    
    # Monitoring & Logging
    "loguru==0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "black==24.10.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[project.scripts]
semantic-hhem-rag = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "only-system"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
